--- a/.htaccess
+++ b/.htaccess
@@ -4,17 +4,14 @@
     </IfModule>
 
     RewriteEngine On
-
-    # Redirect Trailing Slashes If Not A Folder...
-    RewriteCond %{REQUEST_FILENAME} !-d
+    #RewriteCond %{SERVER_PORT} 80 
+    RewriteCond %{HTTP_HOST} !=localhost
+    RewriteRule ^(.*)$ https://%{HTTP_HOST}/www/$1 [R,L]
+    # Redirect Trailing Slashes...
     RewriteRule ^(.*)/$ /$1 [L,R=301]
 
     # Handle Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
-
-    # Handle Authorization Header
-    RewriteCond %{HTTP:Authorization} .
-    RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 </IfModule>
