--- a/.htaccess
+++ b/.htaccess
@@ -5,7 +5,7 @@
 
     RewriteEngine On
     #RewriteCond %{SERVER_PORT} 80 
-    RewriteCond %{HTTP_HOST} !=localhost
+    RewriteCond %{HTTP_HOST} www.uideliverables.com
     RewriteRule ^(.*)$ https://%{HTTP_HOST}/www/$1 [R,L]
     # Redirect Trailing Slashes...
     RewriteRule ^(.*)/$ /$1 [L,R=301]
