--- a/.htaccess
+++ b/.htaccess
@@ -4,7 +4,7 @@
     </IfModule>
 
     RewriteEngine On
-    #RewriteCond %{SERVER_PORT} 80 
+    RewriteCond %{SERVER_PORT} 80 
     RewriteCond %{HTTP_HOST} www.uideliverables.com
     RewriteRule ^(.*)$ https://%{HTTP_HOST}/www/$1 [R,L]
     # Redirect Trailing Slashes...
